<resources>
    <string name="app_name">Private LiveTicker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="create_game">Create Game</string>
    <string name="title_activity_game_create">Create Game</string>
    <string name="list_item_state">State:</string>
    <string name="title_activity_game_detail_fragment">GameDetailFragment</string>
    <string name="title_activity_game_detail">LiveScore</string>
    <string name="game_detail_activity_set">Set</string>
    <string name="manage_game">Manage</string>
    <string name="title_activity_manage_game">Manage Game</string>
    <string name="event_ace">Ace</string>
    <string name="event_block">Block</string>
    <string name="event_lineshot">Line</string>
    <string name="event_cut">Cut</string>
    <string name="event_rainbow">Rainbow</string>
    <string name="event_custom">Custom</string>
    <string name="event_finish_game">Finish Game</string>
    <string name="event_start_game">Start Game</string>
    <string name="event_increment">+</string>
    <string name="event_decrement">-</string>
    <string name="event_next_set">Next Set</string>
    <string name="game_score">0</string>
    <string name="event_prev_set">Prev Set</string>

    <string name="title_public_games">Public Games</string>
    <string name="title_private_games">Private Games</string>


    <!-- Menu Strings -->
    <string name="action_logout">Logout</string>

    <!--

     == Login and Create Account Strings ==

      -->
    <!-- Activity Titles  -->
    <string name="title_activity_create_account">Create Account</string>

    <!-- Login and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>


    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>

    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>

    <!-- Google Errors -->
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>


    <!-- OAuth Format -->
    <string name="oauth2_format">oauth2:%s</string>

    <!-- Log Messages -->
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">auth successful.</string>
    <string name="title_login_activity">Login Activity</string>

    <!-- Base Error Strings-->
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>
    <string name="dialog_message">The password has been sent to your email adress. You will be forwarded to your e-mail application!</string>
    <string name="dialog_title">Forward to your email application?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="create_game_privacy_toggle" />
    <string name="toggle_button_public">public</string>
    <string name="toggle_button_private">private</string>
    <string name="dialog_change_name">Please type in your name!</string>
    <string name="title_activity_game_detail_activity_neu">GameDetailActivityNeu</string>
    <string name="login_SignUp">Sign Up</string>
    <string name="game_deleted">The game has been deleted, returning to main screen ...</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="action_edit">Edit Game</string>
    <string name="action_delete">Delete Game</string>
    <string name="dialog_delete_game">Are you sure to delete the whole game?</string>
    <string name="update_game">Update Game</string>
    <string name="title_activity_game_edit">Edit Game</string>
    <string name="action_discard">Discard changes</string>
    <string name="game_discard">Are you sure that you want to discard all changes?</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_account_name">Name</string>
    <string name="pref_account_key">mUsername</string>
    <string name="pref_account_default">Username</string>


</resources>

