<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.game.gameManage.GameManageActivity"
    tools:showIn="@layout/activity_game_manage">

    <!-- CardView2-->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        card_view:cardCornerRadius="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:padding="2dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tableRow_manage_game_headline">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView_game_manage_table_team1"
                    android:layout_column="0"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/game_detail_activity_set"
                    android:id="@+id/textView_game_mange_table_set"
                    android:layout_column="1"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView_game_manage_table_team2"
                    android:layout_column="2"
                    android:textAlignment="center" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tableRow_manage_game_set1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView_game_manage_table_team1_set1"
                    android:layout_column="0"
                    android:textAlignment="center"
                    android:text="@string/game_score" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="1"
                    android:id="@+id/textView_game_manage_table_set1"
                    android:layout_column="1"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/game_score"
                    android:id="@+id/textView_game_manage_table_team2_set1"
                    android:layout_column="2"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tableRow_manage_game_set2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView_game_manage_table_team1_set2"
                    android:layout_column="0"
                    android:textAlignment="center"
                    android:text="@string/game_score" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="2"
                    android:id="@+id/textView_game_manage_table_set2"
                    android:layout_column="1"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/game_score"
                    android:id="@+id/textView_game_manage_table_team2_set2"
                    android:layout_column="2"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tableRow_manage_game_set3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView_game_manage_table_team1_set3"
                    android:layout_column="0"
                    android:textAlignment="center"
                    android:text="@string/game_score" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="3"
                    android:id="@+id/textView_game_manage_table_set3"
                    android:layout_column="1"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/game_score"
                    android:id="@+id/textView_game_manage_table_team2_set3"
                    android:layout_column="2"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>
        </TableLayout>

    </android.support.v7.widget.CardView>

    <!-- CardView3-->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:padding="5dp"
        android:layout_below="@+id/card_view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">


            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_increment"
                    android:id="@+id/button_increment_team1"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_increment"
                    android:id="@+id/button_increment_team2"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="50dp"
                    android:layout_marginEnd="50dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_prev_set"
                    android:id="@+id/button_prevSet"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0">

                <TextView
                    android:id="@+id/textView_game_manage_team1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:textSize="@dimen/card_game_detail"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingLeft="2dp" />
                <TextView
                    android:id="@+id/textView_game_manage_team1_points"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/card_game_detail"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|end"
                    android:textStyle="bold"
                    android:text="@string/game_score" />
                <TextView
                    android:id="@+id/textView_game_manage_points_divider"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="-"
                    android:textSize="@dimen/card_game_detail"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|center_horizontal"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView_game_manage_team2_points"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/card_game_detail"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="left|center_vertical"
                    android:text="@string/game_score" />
                <TextView
                    android:id="@+id/textView_game_manage_team2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:textSize="@dimen/card_game_detail"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|center_horizontal" />

            </LinearLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_decrement"
                    android:id="@+id/button_decrement_team1"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_decrement"
                    android:id="@+id/button_decrement_team2"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="50dp"
                    android:layout_marginEnd="50dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_next_set"
                    android:id="@+id/button_nextSet"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0">

            </RelativeLayout>

        </GridLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view4"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        card_view:cardCornerRadius="4dp"
        android:padding="5dp"
        android:layout_below="@+id/card_view3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_ace"
                android:id="@+id/button_event_ace"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_block"
                android:id="@+id/button_event_block"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/button_event_ace"
                android:layout_toEndOf="@+id/button_event_ace" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_lineshot"
                android:id="@+id/button_event_lineshot"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/button_event_block"
                android:layout_toEndOf="@+id/button_event_block" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_cut"
                android:id="@+id/button_event_cut"
                android:layout_alignTop="@+id/button_event_lineshot"
                android:layout_toRightOf="@+id/button_event_lineshot"
                android:layout_toEndOf="@+id/button_event_lineshot" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_rainbow"
                android:id="@+id/button_event_rainbow"
                android:layout_alignTop="@+id/button_event_cut"
                android:layout_toRightOf="@+id/button_event_cut"
                android:layout_toEndOf="@+id/button_event_cut" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_manage_game_event"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/button_event_rainbow"
                android:layout_toStartOf="@+id/button_event_rainbow"
                android:hint="Type your custom event" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_send_event"
                android:src="@android:drawable/ic_menu_send"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/editText_manage_game_event"
                android:layout_toEndOf="@+id/editText_manage_game_event" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_finish_game"
        android:id="@+id/button_finish_game"
        android:layout_below="@+id/card_view4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- CardView4-->


</RelativeLayout>
